@@ -1,7 +1,7 @@
 /**
  * ThingsBoard, Inc. ("COMPANY") CONFIDENTIAL
  *
- * Copyright © 2016-2020 ThingsBoard, Inc. All Rights Reserved.
+ * Copyright © 2016-2021 ThingsBoard, Inc. All Rights Reserved.
  *
  * NOTICE: All information contained herein is, and remains
  * the property of ThingsBoard, Inc. and its suppliers,
@@ -35,14 +35,18 @@ import org.thingsboard.rule.engine.api.TbNodeConfiguration;
 import org.thingsboard.server.actors.ActorSystemContext;
 import org.thingsboard.server.actors.TbActorCtx;
 import org.thingsboard.server.actors.TbActorRef;
+import org.thingsboard.server.actors.TbRuleNodeUpdateException;
 import org.thingsboard.server.actors.shared.ComponentMsgProcessor;
+import org.thingsboard.server.common.data.ApiUsageRecordKey;
 import org.thingsboard.server.common.data.id.RuleNodeId;
 import org.thingsboard.server.common.data.id.TenantId;
 import org.thingsboard.server.common.data.plugin.ComponentLifecycleState;
 import org.thingsboard.server.common.data.rule.RuleNode;
+import org.thingsboard.server.common.msg.TbMsg;
 import org.thingsboard.server.common.msg.queue.PartitionChangeMsg;
 import org.thingsboard.server.common.msg.queue.RuleNodeException;
 import org.thingsboard.server.common.msg.queue.RuleNodeInfo;
+import org.thingsboard.server.common.stats.TbApiUsageReportClient;
 
 /**
  * @author Andrew Shvayka
@@ -51,6 +55,7 @@ public class RuleNodeActorMessageProcessor extends ComponentMsgProcessor<RuleNod
 
     private final String ruleChainName;
     private final TbActorRef self;
+    private final TbApiUsageReportClient apiUsageClient;
     private RuleNode ruleNode;
     private TbNode tbNode;
     private DefaultTbContext defaultCtx;
@@ -59,10 +64,11 @@ public class RuleNodeActorMessageProcessor extends ComponentMsgProcessor<RuleNod
     RuleNodeActorMessageProcessor(TenantId tenantId, String ruleChainName, RuleNodeId ruleNodeId, ActorSystemContext systemContext
             , TbActorRef parent, TbActorRef self) {
         super(systemContext, tenantId, ruleNodeId);
+        this.apiUsageClient = systemContext.getApiUsageClient();
         this.ruleChainName = ruleChainName;
         this.self = self;
         this.ruleNode = systemContext.getRuleChainService().findRuleNodeById(tenantId, entityId);
-        this.defaultCtx = new DefaultTbContext(systemContext, new RuleNodeCtx(tenantId, parent, self, ruleNode));
+        this.defaultCtx = new DefaultTbContext(systemContext, ruleChainName, new RuleNodeCtx(tenantId, parent, self, ruleNode));
         this.info = new RuleNodeInfo(ruleNodeId, ruleChainName, ruleNode != null ? ruleNode.getName() : "Unknown");
     }
 
@@ -86,7 +92,11 @@ public class RuleNodeActorMessageProcessor extends ComponentMsgProcessor<RuleNod
             if (tbNode != null) {
                 tbNode.destroy();
             }
-            start(context);
+            try {
+                start(context);
+            } catch (Exception e) {
+                throw new TbRuleNodeUpdateException("Failed to update rule node", e);
+            }
         }
     }
 
@@ -107,26 +117,42 @@ public class RuleNodeActorMessageProcessor extends ComponentMsgProcessor<RuleNod
 
     public void onRuleToSelfMsg(RuleNodeToSelfMsg msg) throws Exception {
         checkActive(msg.getMsg());
-        if (ruleNode.isDebugMode()) {
-            systemContext.persistDebugInput(tenantId, entityId, msg.getMsg(), "Self");
-        }
-        try {
-            tbNode.onMsg(defaultCtx, msg.getMsg());
-        } catch (Exception e) {
-            defaultCtx.tellFailure(msg.getMsg(), e);
+        TbMsg tbMsg = msg.getMsg();
+        int ruleNodeCount = tbMsg.getAndIncrementRuleNodeCounter();
+        int maxRuleNodeExecutionsPerMessage = getTenantProfileConfiguration().getMaxRuleNodeExecsPerMessage();
+        if (maxRuleNodeExecutionsPerMessage == 0 || ruleNodeCount < maxRuleNodeExecutionsPerMessage) {
+            apiUsageClient.report(tenantId, ApiUsageRecordKey.RE_EXEC_COUNT);
+            if (ruleNode.isDebugMode()) {
+                systemContext.persistDebugInput(tenantId, entityId, msg.getMsg(), "Self");
+            }
+            try {
+                tbNode.onMsg(defaultCtx, msg.getMsg());
+            } catch (Exception e) {
+                defaultCtx.tellFailure(msg.getMsg(), e);
+            }
+        } else {
+            tbMsg.getCallback().onFailure(new RuleNodeException("Message is processed by more then " + maxRuleNodeExecutionsPerMessage + " rule nodes!", ruleChainName, ruleNode));
         }
     }
 
     void onRuleChainToRuleNodeMsg(RuleChainToRuleNodeMsg msg) throws Exception {
         msg.getMsg().getCallback().onProcessingStart(info);
         checkActive(msg.getMsg());
-        if (ruleNode.isDebugMode()) {
-            systemContext.persistDebugInput(tenantId, entityId, msg.getMsg(), msg.getFromRelationType());
-        }
-        try {
-            tbNode.onMsg(msg.getCtx(), msg.getMsg());
-        } catch (Exception e) {
-            msg.getCtx().tellFailure(msg.getMsg(), e);
+        TbMsg tbMsg = msg.getMsg();
+        int ruleNodeCount = tbMsg.getAndIncrementRuleNodeCounter();
+        int maxRuleNodeExecutionsPerMessage = getTenantProfileConfiguration().getMaxRuleNodeExecsPerMessage();
+        if (maxRuleNodeExecutionsPerMessage == 0 || ruleNodeCount < maxRuleNodeExecutionsPerMessage) {
+            apiUsageClient.report(tenantId, ApiUsageRecordKey.RE_EXEC_COUNT);
+            if (ruleNode.isDebugMode()) {
+                systemContext.persistDebugInput(tenantId, entityId, msg.getMsg(), msg.getFromRelationType());
+            }
+            try {
+                tbNode.onMsg(msg.getCtx(), msg.getMsg());
+            } catch (Exception e) {
+                msg.getCtx().tellFailure(msg.getMsg(), e);
+            }
+        } else {
+            tbMsg.getCallback().onFailure(new RuleNodeException("Message is processed by more then " + maxRuleNodeExecutionsPerMessage + " rule nodes!", ruleChainName, ruleNode));
         }
     }
 
@@ -139,7 +165,7 @@ public class RuleNodeActorMessageProcessor extends ComponentMsgProcessor<RuleNod
         TbNode tbNode = null;
         if (ruleNode != null) {
             Class<?> componentClazz = Class.forName(ruleNode.getType());
-            tbNode = (TbNode) (componentClazz.newInstance());
+            tbNode = (TbNode) (componentClazz.getDeclaredConstructor().newInstance());
             tbNode.init(defaultCtx, new TbNodeConfiguration(ruleNode.getConfiguration()));
         }
         return tbNode;
